# cult_transcoder

./: .gitignore  .gitmodules  CMakeLists.txt  OVERVIEW.md  README.md  activate.sh  init.ps1  init.sh  quickCommands.txt  realtimeMain.py  runPipeline.py  runRealtime.py
gui/: README_GUI.md  agentGUI.md  main.py  styles.qss
gui/realtimeGUI/: realtimeGUI.py  realtime_runner.py
gui/realtimeGUI/realtime_panels/: RealtimeControlsPanel.py  RealtimeInputPanel.py  RealtimeLogPanel.py  RealtimeTranscodePanel.py  RealtimeTransportPanel.py  brand_widgets.py  theme.py
gui/utils/: effects.py
gui/widgets/: header.py  log_modal.py  switch_toggle.py
include/: adm_to_lusid.hpp  cult_report.hpp  cult_transcoder.hpp  cult_version.hpp
include/audio/: normalize_audio.hpp  wav_io.hpp
internalDocs/: AGENTS-CULT.md  AUTHORING.md  DEVELOPMENT.md  TODO.md  dataFlow.md
internalDocs/futureWork/: mpeg-h-plan.md
internalDocs/references/: DESIGN-DOC-V1-CULT.MD
internalDocsMD/: AGENTS-CULT.md  AGENTS.md  AUTHORING.md  CHANGELOG.md  DESIGN-DOC-V1-CULT.MD  DEV-PLAN-CULT.md  DEVELOPMENT.md  admAuthoring.md  audit.md  authoringTests.md  dataFlow.md  design-reference-CULT.md  devHistory.md  mpeg-h-plan.md  resamplingPlan.md
internalDocsMD/Dependencies/: importingLUSIDpackage.md  json_schema_info.md
internalDocsMD/OS/: 2-23-OS-updates.md
internalDocsMD/Realtime_Engine/agentDocs/: realtime_master.md
internalDocsMD/Realtime_Engine/references/: dark_gui_mockup.html  light_gui_mockup.html  old_realtime_notes.md
internalDocsMD/Repo_Auditing/: REPO_CLEANUP_AUDIT.md  allolib-audit.md
internalDocsMD/Spatialization/: 1-27-rendering-dev.md  1-28-vertical-dev.md  RENDERING.md
internalDocsMD/references/: ebuNotes.md
processedData/: currentMetaData.xml
scripts/: cult-transcoder.bat  shallow-submodules.sh  sparse-allolib.sh
spatial_engine/realtimeEngine/: CMakeLists.txt
spatial_engine/realtimeEngine/src/: main.cpp
spatial_engine/spatialRender/: CMakeLists.txt
spatial_engine/src/: main.cpp
src/: adm_author.cpp  adm_to_lusid.cpp  adm_writer.cpp  adm_writer.hpp  createRender.py  cult_report.hpp  cult_transcoder.hpp  lusid_reader.cpp  lusid_reader.hpp  lusid_scene.hpp  main.cpp  progress.hpp  report.cpp  transcoder.cpp
src/adm_extract/: CMakeLists.txt  main.cpp
src/analyzeADM/: extractMetadata.py
src/audio/: normalize_audio.cpp  normalize_audio.hpp  resampler.hpp  resampler_r8brain.cpp  wav_io.cpp  wav_io.hpp
src/authoring/: README.md  adm_author.cpp  adm_writer.cpp  adm_writer.hpp  authoringHelper.hpp
src/config/: configCPP_posix.py  configCPP_windows.py
src/packaging/: README.md  adm_package.cpp  adm_package.hpp  packagingHelper.hpp
src/parsing/: README.md  lusid_reader.cpp  lusid_reader.hpp  parsingHelper.hpp
src/reporting/: README.md  cult_report.hpp  report.cpp  reporting.md  reportingHelper.hpp
src/transcoding/: transcoding.md
src/transcoding/adm/: admHelper.hpp  adm_profile_resolver.cpp  adm_profile_resolver.hpp  adm_reader.cpp  adm_reader.hpp  adm_to_lusid.cpp  adm_to_lusid.hpp  sony360ra_to_lusid.cpp  sony360ra_to_lusid.hpp
tests/: test_360ra.cpp  test_adm_author_args.cpp  test_adm_author_integration.cpp  test_adm_helpers.cpp  test_adm_package.cpp  test_cli_args.cpp  test_lfe_mode.cpp  test_lusid_to_adm_mapping.cpp  test_report.cpp
tests/parity/: run_parity.cpp
tests/parity/fixtures/: .gitkeep  lfe_speaker_label_fixture.xml  reference_scene.lusid.json  sony_360ra_example.xml  sony_360ra_reference.lusid.json  sony_360ra_reference.lusid.json.report.json  test_input.xml
transcoding/adm/: admHelper.hpp  adm_profile_resolver.cpp  adm_profile_resolver.hpp  adm_reader.cpp  adm_reader.hpp  adm_to_lusid.cpp  adm_to_lusid.hpp  sony360ra_to_lusid.cpp  sony360ra_to_lusid.hpp
transcoding/lusid/: lusid_validate.cpp  lusid_writer.cpp
